--- a/app/src/main/res/layout/fimae_bottom_sheet.xml
+++ b/app/src/main/res/layout/fimae_bottom_sheet.xml
@@ -28,9 +28,30 @@
                     android:layout_height="5dp"
                     android:layout_margin="10dp"
                     android:src="@drawable/rectangle_bottom_sheet"
-            >
-
-            </ImageView>
+            />
+            <TextView
+                android:id="@+id/tv_bottom_sheet_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Tiêu đề"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:textAlignment="center"
+                android:layout_margin="8dp"
+                />
+            <TextView
+                android:id="@+id/tv_bottom_sheet_subtitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Phụ đề"
+                android:textColor="@color/gray_600"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                android:textAlignment="center"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginBottom="8dp"
+                />
             <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rcv_bottom_sheet_items"
                     android:layout_width="match_parent"
