--- a/app/src/main/res/layout/fragment_item_list_dialog_list_dialog.xml
+++ b/app/src/main/res/layout/fragment_item_list_dialog_list_dialog.xml
@@ -50,6 +50,6 @@
             android:paddingTop="@dimen/list_item_spacing_half"
             tools:context=".fragments.MediaListDialogFragment"
             tools:listitem="@layout/fragment_item_list_dialog_list_dialog_item"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"/>
+            app:layout_constraintTop_toBottomOf="@+id/heading_layout"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
