--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -7,8 +7,11 @@
     <data>
         <variable
             name="viewmodel"
-            type="com.example.fimae.viewmodels.ProfileViewModel" />
+            type="com.example.fimae.viewmodels.EditProfileViewModel" />
     </data>
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -17,11 +20,12 @@
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/editProfileToolBar"
-        android:layout_width="409dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
+        android:background="@color/transparent"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
+        android:layout_marginLeft="2dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -57,9 +61,11 @@
 
     <RelativeLayout
         android:id="@+id/relativeName"
-        android:layout_width="409dp"
+        android:layout_width="match_parent"
         android:layout_height="48dp"
         android:layout_marginTop="1dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="15dp"
         android:clickable="true"
         android:background="@drawable/item_color_grey"
         app:layout_constraintEnd_toEndOf="parent"
@@ -70,7 +76,6 @@
             android:id="@+id/imageView2"
             android:layout_width="18dp"
             android:layout_height="18dp"
-            android:layout_marginRight="10dp"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             style="@style/regular_14"
@@ -81,9 +86,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="20dp"
             android:text="Tên"
-            style="@style/semi_bold_18"
+            style="@style/bold_18"
             android:textColor="@color/black" />
 
         <TextView
@@ -101,9 +105,11 @@
 
     <RelativeLayout
         android:id="@+id/relaviveLitId"
-        android:layout_width="409dp"
+        android:layout_width="match_parent"
         android:layout_height="48dp"
         android:background="@drawable/item_color_grey"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="15dp"
         android:clickable="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -115,7 +121,6 @@
             android:layout_height="18dp"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
-            android:layout_marginRight="10dp"
             app:srcCompat="@drawable/ic_copy"
             app:tint="@color/primary_2" />
 
@@ -124,9 +129,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="20dp"
             android:text="Lit ID"
-            style="@style/semi_bold_18"
+            style="@style/bold_18"
             android:textColor="@color/black" />
 
         <TextView
@@ -144,10 +148,12 @@
 
     <RelativeLayout
         android:id="@+id/relativeDOB"
-        android:layout_width="409dp"
+        android:layout_width="match_parent"
         android:layout_height="48dp"
         android:background="@drawable/item_color_grey"
         android:clickable="true"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/relaviveLitId">
@@ -158,7 +164,6 @@
             android:layout_height="18dp"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
-            android:layout_marginRight="10dp"
             app:srcCompat="@drawable/ic_chevron_right" />
 
         <TextView
@@ -166,9 +171,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="20dp"
             android:text="Ngày sinh"
-            style="@style/semi_bold_18"
+            style="@style/bold_18"
             android:textColor="@color/black" />
 
         <TextView
@@ -182,26 +186,31 @@
 
     </RelativeLayout>
 
+    <TextView
+        android:id="@+id/bio"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="15dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/relativeDOB"
+        style="@style/bold_18"
+        android:text="Tiểu sử"
+        android:textColor="@color/black" />
     <RelativeLayout
-        android:layout_width="409dp"
+        android:id="@+id/relativeBio"
+        android:layout_width="match_parent"
         android:layout_height="160dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/relativeDOB">
-        <TextView
-            android:id="@+id/bio"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="20dp"
-            style="@style/semi_bold_18"
-            android:text="Tiểu sử"
-            android:textColor="@color/black" />
+        app:layout_constraintTop_toBottomOf="@+id/bio">
+
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="160dp"
             app:counterEnabled="true"
             app:counterMaxLength="200"
+            android:layout_alignParentBottom="true"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="10dp"
             app:counterOverflowTextAppearance="@style/TextAppearance.AppCompat.Small"
@@ -223,7 +232,103 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
-
     </RelativeLayout>
+
+    <TextView
+        android:id="@+id/tagTxt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="15dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/relativeBio"
+        style="@style/bold_18"
+        android:text="Thẻ tag"
+        android:textColor="@color/black" />
+    <TextView
+        android:id="@+id/tag2Txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="15dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tagTxt"
+        style="@style/semi_bold_16"
+        android:text="Mô tả những gì bạn thích với các thẻ tag" />
+
+        <com.google.android.material.chip.ChipGroup
+            android:id="@+id/inputChip"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="22dp"
+            android:layout_marginTop="12dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:chipSpacingHorizontal="5dp"
+            app:chipSpacingVertical="5dp"
+            app:viewModel ="@{viewmodel}"
+            app:chipsData="@{viewmodel.chip}"
+            app:chipType="@{`input`}"
+            app:checkedChips="@{viewmodel.user.chip}"
+            app:layout_constraintTop_toBottomOf="@+id/tag2Txt"/>
+            <com.google.android.material.tabs.TabLayout
+                android:id="@+id/tabView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="0dp"
+                app:layout_constraintTop_toBottomOf="@id/inputChip"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:tabMode="scrollable"
+                app:tabInlineLabel="true"
+                app:tabIndicatorFullWidth="false">
+
+                <com.google.android.material.tabs.TabItem
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Tính cách"
+                    android:icon="@drawable/ic_personality" />
+
+                <com.google.android.material.tabs.TabItem
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Chòm sao"
+                    android:icon="@drawable/ic_zodiac" />
+
+                <com.google.android.material.tabs.TabItem
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Thú cưng"
+                    android:icon="@drawable/ic_pet" />
+
+                <com.google.android.material.tabs.TabItem
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Âm nhạc"
+                    android:icon="@drawable/ic_music" />
+
+                <com.google.android.material.tabs.TabItem
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Thể thao"
+                    android:icon="@drawable/ic_basketball" />
+
+            </com.google.android.material.tabs.TabLayout>
+
+        <com.google.android.material.chip.ChipGroup
+            android:id="@+id/chipGroup"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="22dp"
+            android:layout_marginTop="12dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:chipsData="@{viewmodel.chip}"
+            app:viewModel="@{viewmodel}"
+            app:chipType="@{`choice`}"
+            app:checkedChips="@{viewmodel.user.chip}"
+            app:chipSpacingHorizontal="5dp"
+            app:chipSpacingVertical="5dp"
+            app:layout_constraintTop_toBottomOf="@+id/tabView"/>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.core.widget.NestedScrollView>
 </layout>
