--- a/app/src/main/res/layout/choice_chip_item_layout.xml
+++ b/app/src/main/res/layout/choice_chip_item_layout.xml
@@ -5,8 +5,9 @@
     xmlns:tools="http://schemas.android.com/tools">
     <com.google.android.material.chip.Chip
         android:id="@+id/chip2"
-        style="@style/non_clickable_chip"
+        style="@style/CustomChoiceChipStyle"
         app:ensureMinTouchTargetSize="false"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content" >
+    </com.google.android.material.chip.Chip>
 </layout>
