feat: change VideoView to PlayerView

--- a/app/src/main/res/layout/activity_media_slider.xml
+++ b/app/src/main/res/layout/activity_media_slider.xml
@@ -6,10 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".activities.MediaSliderActivity">
 
-    <androidx.viewpager.widget.ViewPager
+    <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/view_paper"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    </androidx.viewpager.widget.ViewPager>
+    </androidx.viewpager2.widget.ViewPager2>
 </androidx.constraintlayout.widget.ConstraintLayout>
