--- a/app/src/main/res/layout/layout_story_item.xml
+++ b/app/src/main/res/layout/layout_story_item.xml
@@ -15,11 +15,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-    <VideoView
-        android:id="@+id/mVideoView"
+    <SurfaceView
+        android:id="@+id/surfaceVideoView"
         android:visibility="gone"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_centerInParent="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
