--- a/app/src/main/res/layout/layout_reel.xml
+++ b/app/src/main/res/layout/layout_reel.xml
@@ -95,17 +95,36 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:gravity="center_horizontal"
-        android:layout_marginBottom="100dp"
+        android:layout_marginBottom="90dp"
         android:layout_marginEnd="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/story_avatar"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/ic_default_avatar"
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="60dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent">
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:layout_width="42dp"
+                android:layout_height="42dp"
+                android:src="@color/white"
+                android:layout_gravity="center"
+                />
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/short_avatar"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_default_avatar"
+                />
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/ic_follow"
+                android:layout_width="18dp"
+                android:layout_height="18dp"
+                android:layout_gravity="bottom|center"
+                android:src="@drawable/ic_follow"
+                />
+        </FrameLayout>
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -119,6 +138,7 @@
                 android:src="@drawable/ic_heart_video"
                 android:adjustViewBounds="true"
                 android:background="@null"
+                app:tint="@color/white"
                 android:scaleType="fitCenter"/>
             <TextView
                 android:id="@+id/item_video_tv_like"
@@ -168,14 +188,6 @@
                 android:adjustViewBounds="true"
                 android:background="@null"
                 android:scaleType="fitCenter"/>
-            <TextView
-                android:id="@+id/item_video_tv_share"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:text="50"
-                android:textColor="@color/text_white"
-                style="@style/bold_14" />
         </LinearLayout>
     </LinearLayout>
 
