--- a/app/src/main/res/layout/layout_reel.xml
+++ b/app/src/main/res/layout/layout_reel.xml
@@ -76,7 +76,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:tint="@color/text_white" />
 
-    <ImageButton
+    <!--<ImageButton
         android:id="@+id/item_video_ic_search"
         android:layout_width="25dp"
         android:layout_height="25dp"
@@ -88,7 +88,7 @@
         android:src="@drawable/ic_search"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:tint="@color/text_white" />
+        app:tint="@color/text_white" />-->
 
     <LinearLayout
         android:layout_width="wrap_content"
