--- a/app/src/main/res/layout/dialog_stories.xml
+++ b/app/src/main/res/layout/dialog_stories.xml
@@ -8,7 +8,7 @@
     android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout"
+        android:id="@+id/post_message_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
