--- a/app/src/main/res/layout/post_link.xml
+++ b/app/src/main/res/layout/post_link.xml
@@ -20,7 +20,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_width="wrap_content"
-            android:id="@+id/card"
+            android:id="@+id/post_link_card"
             app:cardCornerRadius="16dp"
             android:layout_marginTop="5dp"
             android:layout_height="wrap_content">
@@ -34,7 +34,7 @@
             android:layout_marginTop="5dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/card"
+            app:layout_constraintTop_toBottomOf="@id/post_link_card"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:id="@+id/title"
