--- a/app/src/main/res/layout/post_link_sender.xml
+++ b/app/src/main/res/layout/post_link_sender.xml
@@ -1,61 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/post_message_linear_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_alignParentEnd="true"
-    android:gravity="end"
-    >
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="5dp"
-        android:layout_marginVertical="5dp"
-        android:paddingHorizontal="5dp"
-        android:background="@drawable/bubble_sender"
-        >
-        <androidx.cardview.widget.CardView
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_width="wrap_content"
-            android:id="@+id/card"
-            app:cardCornerRadius="16dp"
-            android:layout_marginTop="5dp"
-            android:layout_height="wrap_content">
-            <com.example.fimae.adapters.SquareImageView
-                android:layout_width="170dp"
-                android:layout_height="wrap_content"
-                android:scaleType="centerCrop"
-                android:id="@+id/post_image"/>
-        </androidx.cardview.widget.CardView>
-        <TextView
-            android:layout_marginTop="5dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/card"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:id="@+id/title"
-            android:text="Đi tới bài đăng"
-            android:textAlignment="center"
-            android:textSize="15dp"
-            android:textColor="@color/white"
-            />
-        <TextView
-            android:id="@+id/post_link_img"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:maxWidth="150dp"
-            app:layout_constraintTop_toBottomOf="@id/title"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:text="ạinklw hèienawcjklwhajbkhce"
-            android:textSize="12dp"
-            android:layout_marginTop="5dp"
-            android:textColor="@color/white"
-            android:textAlignment="center"
-            />
+    android:padding="8dp"
+    android:gravity="end">
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.cardview.widget.CardView
+        android:id="@+id/post_link_card"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+
+        app:cardCornerRadius="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/post_message_layout"
+            android:background="@color/primary_1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:background="@color/white"
+                android:id="@+id/post_image"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="0dp"
+                android:minWidth="200dp"
+                android:minHeight="200dp"
+                android:padding="0dp"
+                android:scaleType="centerCrop"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:layout_margin="10dp"
+                android:maxLines="2"
+                android:id="@+id/post_message_title"
+                android:textStyle="bold"
+                android:ellipsize="end"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Trời hôm nay đẹp quá là đẹp luôn nè bà con ơi ra đây mà xem nè alo alo"
+                android:textAlignment="textStart"
+                android:textColor="@color/white"
+                android:textSize="15dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/post_image" />
+
+            <TextView
+                android:id="@+id/label_post_view"
+                android:layout_width="match_parent"
+                android:layout_height="35dp"
+                android:layout_margin="10dp"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/diolog_item_background"
+                android:gravity="center"
+                android:maxWidth="150dp"
+                android:text="XEM BÀI VIẾT NÀY"
+                android:textColor="@color/primary_1"
+                android:textSize="12dp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/post_message_title" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
+
+
 </LinearLayout>
