--- a/app/src/main/res/layout/activity_add_short.xml
+++ b/app/src/main/res/layout/activity_add_short.xml
@@ -55,7 +55,7 @@
             app:layout_constraintStart_toStartOf="parent">
             <ImageView
                 android:id="@+id/image_video"
-                android:background="@color/black"
+                android:background="@drawable/background_gradient"
                 android:layout_width="100dp"
                 android:layout_height="150dp"
                 android:scaleType="centerCrop"
@@ -64,6 +64,13 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/ic_add"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/ic_add_short"
+                android:backgroundTint="@color/background_button_dark_1_endColor"
+                android:layout_gravity="center"/>
         </androidx.cardview.widget.CardView>
 
         <RelativeLayout
