--- a/app/src/main/res/layout/layout_reel.xml
+++ b/app/src/main/res/layout/layout_reel.xml
@@ -36,10 +36,12 @@
 
         <ProgressBar
             android:id="@+id/loading"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="6dp"
+            android:layout_gravity="bottom"
+            android:layout_marginBottom="5dp"
             android:indeterminate="true"
+            style="?android:attr/progressBarStyleHorizontal"
             android:indeterminateTintMode="src_atop"
             android:indeterminateTint="@color/text_white"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -145,7 +147,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
-                android:text="120.7K"
+                android:text=""
                 android:textColor="@color/text_white"
                 style="@style/bold_14" />
         </LinearLayout>
@@ -169,7 +171,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
-                android:text="120"
+                android:text=""
                 android:textColor="@color/text_white"
                 style="@style/bold_14" />
         </LinearLayout>
@@ -205,7 +207,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="start"
-            android:text="Chuyện nhà mèo"
+            android:text=""
             android:textColor="@color/text_white"
             style="@style/bold_20" />
         <TextView
@@ -214,7 +216,7 @@
             android:layout_height="wrap_content"
             android:gravity="start"
             android:layout_marginTop="5dp"
-            android:text="Bộ sưu tập những cảnh quay đáng yêu và đầy hài hước về các chú mèo dễ thương."
+            android:text=""
             android:textColor="@color/text_white"
             style="@style/regular_16" />
     </LinearLayout>
