--- a/app/src/main/res/menu/menu_bottom_nav.xml
+++ b/app/src/main/res/menu/menu_bottom_nav.xml
@@ -7,7 +7,7 @@
     <item
         android:id="@+id/action_feed"
         android:title="@string/action_feed"
-        android:icon="@drawable/ic_star"/>
+        android:icon="@drawable/ic_chart"/>
     <item
         android:id="@+id/action_date"
         android:title="@string/action_date"
