--- a/app/src/main/res/layout/post_link_sender.xml
+++ b/app/src/main/res/layout/post_link_sender.xml
@@ -1,79 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/post_message_linear_layout"
+    android:id="@+id/post_message_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_alignParentEnd="true"
-    android:padding="8dp"
-    android:gravity="end">
+    android:background="@color/primary_1"
+    android:minWidth="200dp">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/post_link_card"
-        android:layout_width="200dp"
+    <ImageView
+        android:id="@+id/post_image"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="0dp"
+        android:background="@color/white"
+        android:minWidth="200dp"
+        android:minHeight="200dp"
+        android:padding="0dp"
+        android:scaleType="centerCrop"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        app:cardCornerRadius="16dp"
+    <TextView
+        android:id="@+id/post_message_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:ellipsize="end"
+        android:maxLines="2"
+        android:text="Đây là tiêu đề rất rất là dài luôn nha, nó dài đến mức không thể tưởng tượng nổi"
+        android:textAlignment="textStart"
+        android:textColor="@color/white"
+        android:textSize="15dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/post_image" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/post_message_layout"
-            android:background="@color/primary_1"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+    <TextView
+        android:id="@+id/label_post_view"
+        android:layout_width="match_parent"
+        android:layout_height="35dp"
+        android:layout_margin="10dp"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/diolog_item_background"
+        android:gravity="center"
+        android:maxWidth="150dp"
+        android:text="XEM BÀI VIẾT NÀY"
+        android:textColor="@color/primary_1"
+        android:textSize="12dp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/post_message_title" />
+</androidx.constraintlayout.widget.ConstraintLayout>
 
-            <ImageView
-                android:background="@color/white"
-                android:id="@+id/post_image"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="0dp"
-                android:minWidth="200dp"
-                android:minHeight="200dp"
-                android:padding="0dp"
-                android:scaleType="centerCrop"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:layout_margin="10dp"
-                android:maxLines="2"
-                android:id="@+id/post_message_title"
-                android:textStyle="bold"
-                android:ellipsize="end"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Trời hôm nay đẹp quá là đẹp luôn nè bà con ơi ra đây mà xem nè alo alo"
-                android:textAlignment="textStart"
-                android:textColor="@color/white"
-                android:textSize="15dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/post_image" />
-
-            <TextView
-                android:id="@+id/label_post_view"
-                android:layout_width="match_parent"
-                android:layout_height="35dp"
-                android:layout_margin="10dp"
-                android:layout_marginTop="5dp"
-                android:background="@drawable/diolog_item_background"
-                android:gravity="center"
-                android:maxWidth="150dp"
-                android:text="XEM BÀI VIẾT NÀY"
-                android:textColor="@color/primary_1"
-                android:textSize="12dp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/post_message_title" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.cardview.widget.CardView>
-
-
-</LinearLayout>
