--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -28,9 +28,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="Nhắn tin"
+                    android:text="Trò chuyện"
                     android:textColor="@color/primary_1"
-                    style="@style/bold_24"
+                    style="@style/bold_20"
             />
         </androidx.appcompat.widget.Toolbar>
 
