add floating waiting

--- a/app/src/main/res/layout/detail_post.xml
+++ b/app/src/main/res/layout/detail_post.xml
@@ -297,27 +297,25 @@
                 android:layout_width="match_parent"
                 android:layout_height="0.5dp"
                 android:background="@drawable/divided_shape"
-                android:layout_marginBottom="6dp"
                 android:layout_above="@id/bottom"
                 />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/bottom"
-                android:layout_marginBottom="0dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingBottom="0dp"
                 android:layout_alignParentBottom="true"
-
+                android:paddingVertical="5dp"
                 >
 
                 <ImageView
                     android:id="@+id/icon_emoji"
                     android:layout_width="25dp"
                     android:layout_height="25dp"
-                    android:layout_marginLeft="14dp"
+                    android:layout_marginStart="14dp"
                     android:src="@drawable/smile"
                     app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     />
                 <ImageView
@@ -326,8 +324,8 @@
                     android:layout_height="25dp"
                     android:layout_marginLeft="17dp"
                     android:src="@drawable/ic_aplus"
-                    app:layout_constraintTop_toTopOf="@id/icon_emoji"
                     app:layout_constraintLeft_toRightOf="@id/icon_emoji"
+                    app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     />
                 <EditText
@@ -340,7 +338,8 @@
                     android:textColor="@color/text_secondary"
                     style="@style/medium_16"
                     android:gravity="center"
-                    app:layout_constraintBottom_toBottomOf="@id/icon_emoji"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toRightOf="@id/icon_image"
                     android:background="@drawable/add_comment_background"
                     />
@@ -350,7 +349,8 @@
                     android:layout_height="40dp"
                     android:scaleType="fitStart"
                     android:layout_marginEnd="10dp"
-                    app:layout_constraintBottom_toBottomOf="@id/icon_emoji"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
                     android:background="@drawable/cantpost" />
             </androidx.constraintlayout.widget.ConstraintLayout>
