--- a/app/src/main/res/layout/detail_post.xml
+++ b/app/src/main/res/layout/detail_post.xml
@@ -1,10 +1,10 @@
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <RelativeLayout
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_marginBottom="5dp"
             android:layout_height="match_parent"
@@ -328,21 +328,23 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     />
+
                 <EditText
                     android:id="@+id/add_comment"
-                    android:layout_width="210dp"
+                    style="@style/medium_16"
+                    android:layout_width="match_parent"
                     android:layout_height="40dp"
+                    android:layout_marginStart="90dp"
+                    android:layout_marginEnd="80dp"
+                    android:background="@drawable/add_comment_background"
+                    android:gravity="center"
                     android:hint="Để lại một bình luận"
                     android:paddingHorizontal="20dp"
-                    android:layout_marginLeft="20dp"
                     android:textColor="@color/text_secondary"
-                    style="@style/medium_16"
-                    android:gravity="center"
-                    app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/post"
                     app:layout_constraintLeft_toRightOf="@id/icon_image"
-                    android:background="@drawable/add_comment_background"
-                    />
+                    app:layout_constraintTop_toTopOf="parent" />
                 <ImageView
                     android:id="@+id/post"
                     android:layout_width="65dp"
