--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -20,6 +20,11 @@
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
+    <style name="TransparentAppBar" parent="Widget.MaterialComponents.AppBarLayout.PrimarySurface">
+        <item name="android:elevation">0dp</item>
+        <item name="android:background">@android:color/transparent</item>
+    </style>
+
     <style name="Theme.Fimae.AppBarOverlay" parent="ThemeOverlay.AppCompat.ActionBar"/>
     <style name="Theme.Fimae.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
     <!-- bottom sheet -->
