--- a/app/src/main/res/layout/appbar_post.xml
+++ b/app/src/main/res/layout/appbar_post.xml
@@ -13,7 +13,7 @@
         android:id="@+id/btn_setting_home"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:background="@drawable/ic_search"
+        android:background="@color/white"
         android:padding="20dp"/>
 
     <Space
