--- a/app/src/main/res/layout/choose_image_bottom_modal.xml
+++ b/app/src/main/res/layout/choose_image_bottom_modal.xml
@@ -18,7 +18,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:text="Thêm ảnh"
+            android:text="Chọn ảnh"
             style="@style/bold_16"
             android:textColor="@color/black"/>
         <com.example.fimae.fragments.BottomModalItemView
